# UFRGS-Comp.Perf.Analysis

./: .gitignore  README.md  main.py  pyproject.toml  todo.md
base_docs/ar_sa/: إرشادات.md  خدمات.md  دليل_الأمن.md  عقد.md  قرض.md  مدخرات.md
base_docs/cs_cz/: pokyny.md  pracujte_s_nami.md  smlouva.md  vytvorit_ucet.md
base_docs/da_dk/: arbejd_med_os.md  lån.md  opret_konto.md  partnerdeltagelse.md  tjenester.md
base_docs/de_de/: arbeite_mit_uns.md  konto_erstellen.md  partner_beteiligung.md  richtlinien.md  sicherheitsanleitung.md
base_docs/en_gb/: contract.md  create_account.md  work_with_us.md
base_docs/en_us/: contract.md  guidelines.md  loan.md  partner_participation.md  security_manual.md  services.md  work_with_us.md
base_docs/es_es/: directrices.md  manual_de_seguridad.md  servicios.md
base_docs/fr_fr/: manuel_de_securite.md  plans_de_retraite.md  services.md  travaille_avec_nous.md
base_docs/hi_in/: hamare_sath_kam_karo.md  ऋण.md  बचत.md  सवए.md  सवनवतत_यजनए.md
base_docs/it_it/: contratto.md  crea_account.md  lavora_con_noi.md  linee_guida.md  partecipazione_partner.md  piani_pensione.md  prestito.md  servizi.md
base_docs/ja_jp/: keiyaku.md  taishoku_keikaku.md  パートナー_参加.md  ローン.md
base_docs/ko_kr/: 계약.md  계정_만들기.md  서비스.md  저축.md
base_docs/nl_nl/: account_aanmaken.md  besparingen.md  diensten.md  partner_deelname.md  pensioenplannen.md  werk_met_ons.md
base_docs/pl_pl/: pozyczka.md  umowa.md  uslugi.md
base_docs/pt_br/: contrato.md  criar_conta.md  (+4 more)
src/: experiments.csv  translate_all.py
tests/: rag_test.py  test_cuda.py
(+179 files in other folders)
